--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
-<html lang="vi">
+<!-- <!DOCTYPE html>
+<html lang="vi"> -->
 
-<head>
+<!-- <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roadmap Zig-Zag</title>
@@ -44,11 +44,11 @@
             padding: 0;
         }
     </style>
-</head>
+</head> -->
 
-<body>
+<!-- <body>
 
-    <!-- <h2>Workshop Roadmap (Zig-Zag)</h2>
+     <h2>Workshop Roadmap (Zig-Zag)</h2>
     <button onclick="startAnimation()">Chạy Roadmap</button>
     <div class="container">
         <svg width="600" height="400" viewBox="0 0 600 400">
@@ -83,8 +83,86 @@
                 ease: "power1.inOut"
             });
         }
-    </script> -->
+    </script> 
 
 </body>
 
+</html> -->
+
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Element chạy theo bản đồ</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/MotionPathPlugin.min.js"></script>
+    <style>
+        body {
+            background-image: url('./brochure.jpg');
+            /* Thay 'your-image.jpg' bằng đường dẫn ảnh của bạn */
+            background-size: 100% auto;
+            /* Chiều rộng 100%, chiều cao tự động */
+            background-position: top center;
+            /* Căn ảnh theo chiều ngang */
+            background-repeat: no-repeat;
+            /* Không lặp lại */
+            background-attachment: scroll;
+            /* Cho phép cuộn */
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            position: relative;
+            width: 100%;
+            height: 100vh;
+        }
+
+        #movingElement {
+            width: 40px;
+            height: 40px;
+            background-image: url('./apps-arduino.ico'); /* Icon di chuyển */
+            background-size: cover;
+            position: absolute;
+        }
+
+        svg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 200vh; /* Phù hợp với bản đồ */
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <svg viewBox="0 0 600 1200">
+            <path id="mapPath" d="M 50 50 Q 300 200, 400 500 T 550 900" stroke="red" fill="transparent" stroke-width="3"/>
+        </svg>
+        <div id="movingElement"></div>
+    </div>
+
+    <button onclick="startAnimation()">Chạy</button>
+
+    <script>
+        gsap.registerPlugin(MotionPathPlugin);
+
+        function startAnimation() {
+            gsap.to("#movingElement", {
+                duration: 5,
+                motionPath: {
+                    path: "#mapPath",
+                    align: "#mapPath",
+                    alignOrigin: [0.5, 0.5],
+                    autoRotate: true
+                },
+                ease: "power1.inOut"
+            });
+        }
+    </script>
+
+</body>
 </html>
