change position element 2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div class="container">
-        <h2>Workshop "Trẻ Truyền Trẻ"</h2>
         <!-- 6 phần tử ảnh với vị trí và nội dung pop-up riêng -->
         <img src="./element/t0.png" class="floating-element event-item event-0" alt="Âm sắc cổ 1" onclick="showPopup(0)">
         <img src="./element/t1.png" class="floating-element event-item event-1" alt="Âm sắc cổ 2" onclick="showPopup(1)">
@@ -18,6 +17,8 @@
         <img src="./element/t5.png" class="floating-element event-item event-5" alt="Âm sắc cổ 6" onclick="showPopup(5)">
         <!-- Phần tử placeholder để kích hoạt cuộn, chiều cao sẽ được JavaScript điều chỉnh -->
         <div class="scroll-placeholder"></div>
+        <!-- <div id="moving-element"></div> -->
+
     </div>
 
     <!-- Pop-up chung, nội dung sẽ thay đổi theo phần tử được click -->
