--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="./element/t5.png" class="floating-element event-item event-5" alt="Âm sắc cổ 6" onclick="showPopup(5)">
         <!-- Phần tử placeholder để kích hoạt cuộn, chiều cao sẽ được JavaScript điều chỉnh -->
         <div class="scroll-placeholder"></div>
-        <!-- <div id="moving-element"></div> -->
+        <div id="moving-element"></div>
 
     </div>
 
