--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <img src="./element/t3.png" class="floating-element event-item event-3" alt="Âm sắc cổ 4" onclick="showPopup(3)">
         <img src="./element/t4.png" class="floating-element event-item event-4" alt="Âm sắc cổ 5" onclick="showPopup(4)">
         <img src="./element/t5.png" class="floating-element event-item event-5" alt="Âm sắc cổ 6" onclick="showPopup(5)">
+        <img src="./element/TAN HỌC.png" class="floating-element event-item event-6" alt="Âm sắc cổ 7" onclick="showPopup(6)">
+
         <!-- Phần tử placeholder để kích hoạt cuộn, chiều cao sẽ được JavaScript điều chỉnh -->
         <div class="scroll-placeholder"></div>
         <div id="moving-element"></div>
