--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Phần tử placeholder để kích hoạt cuộn, chiều cao sẽ được JavaScript điều chỉnh -->
         <div class="scroll-placeholder"></div>
         <div id="moving-element"></div>
-
+        <a href="google.com">aaaaaa</a>
     </div>
 
     <!-- Pop-up chung, nội dung sẽ thay đổi theo phần tử được click -->
