--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- Pop-up chung, nội dung sẽ thay đổi theo phần tử được click -->
     <div id="popup">
-        <h2>Thông tin chi tiết</h2>
+        <h2 id="popup-title">Thông tin chi tiết</h2>
         <p id="popup-content">Nội dung mặc định sẽ được thay thế.</p>
         <button onclick="closePopup()">Đóng</button>
     </div>
