--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brochure với 6 Hiệu ứng Lơ Lửng, Pop-up, Cuộn, và Placeholder Scale Theo Ảnh</title>
     <link rel="stylesheet" href="styles.css"> <!-- Liên kết file CSS -->
+    <link rel="icon" type="image/x-icon" href="./element/LOGO TYPO.png">
 </head>
 <body>
     <div class="container">
